testcrate/ui/forget-ok.stderr
error[E0308]: mismatched types
 --> $DIR/forget-ok.rs:8:28
  |
8 | fn foo() -> Result<(), ()> {}
  |                            ^^ expected enum `std::result::Result`, found ()
  |
  = note: expected type `std::result::Result<(), ()>`
             found type `()`

error[E0308]: mismatched types
  --> $DIR/forget-ok.rs:12:11
   |
12 |     yield 7;
   |           ^
   |           |
   |           expected enum `std::result::Result`, found integral variable
   |           help: try using a variant of the expected type: `Ok(7)`
   |
   = note: expected type `std::result::Result<u32, futures::__rt::StreamError<()>>`
              found type `{integer}`

error: aborting due to 2 previous errors

